--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -719,7 +719,7 @@
                     <div class="video-info">
                         <h3>The Way of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>This Grid Trading Strategy is INSANE (High Win Rate)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Impact of Early Sexual Exposure | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8085,7 +8085,7 @@
                         <div class="video-info">
                             <h3>The Way of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
