--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>October Trading Results: NQ Strategy Performance Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8894,7 +8894,7 @@
                         <div class="video-info">
                             <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
