--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>How Likely Is a False Signal in Moving Average Trading?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Devi Yantra Can Do Incredible Things | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Is Sexuality Ruling Your Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8894,7 +8894,7 @@
                         <div class="video-info">
                             <h3>The Real Japanese Minimalism: 10 Rules They Don’t Tell You</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>24 HOURS WITH VIKKSTAR IN THE ALPS 🏔️</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
